SigmaCodebackup3rdSep/objects/Reminder_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Reminder Queue</relationshipLabel>
        <relationshipName>Reminder_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Reminder Queue</relationshipLabel>
        <relationshipName>Reminder_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <formula>IF(Purchase_Order__c != null,DATEVALUE(Purchase_Order__r.Expected_Date__c) ,DATEVALUE(Stock_Receiving__r.Received_Date_Time__c))</formula>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_date_new__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Receiving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving</label>
        <referenceTo>Stock_In__c</referenceTo>
        <relationshipLabel>Reminder Queue</relationshipLabel>
        <relationshipName>Reminder_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reminder_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reminder Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sigma_Order__c</columns>
        <columns>Purchase_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Reminder Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>